--- a/permission-denied.html
+++ b/permission-denied.html
@@ -2,37 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Permission Needed</title>
+  <title>Permission Required</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      background: #000;
+      margin: 0;
+      padding: 0;
+      background-color: #000;
       color: #fff;
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
       text-align: center;
-      padding: 20px;
+    }
+    h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.1rem;
+      max-width: 90%;
     }
     button {
-      margin-top: 20px;
+      margin-top: 1.5rem;
+      padding: 0.7em 1.2em;
+      font-size: 1rem;
       background: #222;
       color: #fff;
-      padding: 10px 15px;
-      font-size: 1rem;
       border: 1px solid #fff;
       border-radius: 8px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background: #333;
     }
   </style>
 </head>
 <body>
   <div>
-    <h2>📍 Permission Not Granted</h2>
-    <p>Please allow location access and reload the page to continue.</p>
-    <button onclick="window.location.href='index.html'">Try Again</button>
+    <h2>📍 Location Permission Needed</h2>
+    <p>This page needs access to your location.<br>Please allow location permission and reload the page.</p>
+    <button onclick="window.location.href='index.html'">🔄 Try Again</button>
   </div>
 </body>
 </html>
