--- a/permission-denied.html
+++ b/permission-denied.html
@@ -44,8 +44,8 @@
 </head>
 <body>
   <div>
-    <h2>📍 Location Permission Needed</h2>
-    <p>This page needs access to your location.<br>Please allow location permission and reload the page.</p>
+    <h2>Permissions Needed</h2>
+    <p><br>Please allow location permission and reload the page.</p>
     <button onclick="window.location.href='index.html'">🔄 Try Again</button>
   </div>
 </body>
