permission-denied.html

--- a/permission-denied.html
+++ b/permission-denied.html
@@ -45,7 +45,7 @@
 <body>
   <div>
     <h2>Permissions Needed</h2>
-    <p><br>Please allow location permission and reload the page.</p>
+    <p><br>Please allow permissions and reload the page.</p>
     <button onclick="window.location.href='index.html'">🔄 Try Again</button>
   </div>
 </body>
