--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div id="status">
-    <button id="startBtn">Start FlexxDrop</button>
+    <button id="startBtn">Open FlexxDrop</button>
   </div>
 
   <script>
